[gd_scene load_steps=20 format=3 uid="uid://lk5unq5b2b8i"]

[ext_resource type="Script" uid="uid://buk5o1xoa4nge" path="res://character_body_3d.gd" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://d2chllce7l2ln" path="res://ball.gd" id="2_h2yge"]
[ext_resource type="Script" uid="uid://8ulc5nsuev6r" path="res://hole.gd" id="3_h2yge"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_h2yge"]
sky_top_color = Color(0.2, 0.4, 0.8, 1)
sky_horizon_color = Color(0.4, 0.6, 0.9, 1)
ground_bottom_color = Color(0.2, 0.4, 0.8, 1)
ground_horizon_color = Color(0.4, 0.6, 0.9, 1)
ground_curve = 0.8

[sub_resource type="Sky" id="Sky_1bvp3"]
sky_material = SubResource("ProceduralSkyMaterial_h2yge")
process_mode = 1
radiance_size = 4

[sub_resource type="Environment" id="Environment_0xm2m"]
background_mode = 2
sky = SubResource("Sky_1bvp3")
tonemap_mode = 2
glow_enabled = true
volumetric_fog_length = 20.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7dm0k"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7dm0k"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ig7tw"]
bounce = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_ig7tw"]

[sub_resource type="SphereMesh" id="SphereMesh_0xm2m"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ig7tw"]
albedo_color = Color(0.168627, 0.423529, 0.14902, 0)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_h2yge"]

[sub_resource type="Theme" id="Theme_1bvp3"]
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/outline_size = 5
Label/font_sizes/font_size = 42

[sub_resource type="Theme" id="Theme_lquwl"]
default_font_size = 10
Label/colors/font_color = Color(1, 1, 1, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/colors/font_shadow_color = Color(0, 0, 0, 0)
Label/constants/outline_size = 5
Label/font_sizes/font_size = 42

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2yge"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1bvp3"]
material = SubResource("StandardMaterial3D_h2yge")

[sub_resource type="Theme" id="Theme_h2yge"]
Label/font_sizes/font_size = 141

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1bvp3"]
albedo_color = Color(0, 0.258824, 0.792157, 1)

[node name="main" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0xm2m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.945519, -0.289044, 0.149826, 0, 0.4602, 0.887815, -0.325568, 0.839446, -0.435127, 0, 0, 0)
light_energy = 0.515
light_indirect_energy = 1.485
shadow_enabled = true

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.1, 0, 0)
script = ExtResource("2_0xm2m")

[node name="Head" type="Node3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)

[node name="Camera3D" type="Camera3D" parent="Player/Head"]

[node name="RayCast3D" type="RayCast3D" parent="Player/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.1, -0.6)
collision_mask = 3
debug_shape_thickness = 5

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
mesh = SubResource("CapsuleMesh_7dm0k")
skeleton = NodePath("../../../CollisionShape3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
shape = SubResource("CapsuleShape3D_7dm0k")

[node name="Ball" type="Node3D" parent="." groups=["pickupable"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -34.1, 1, -4.3)

[node name="RigidBody3D" type="RigidBody3D" parent="Ball" groups=["pickupable"]]
physics_interpolation_mode = 1
physics_material_override = SubResource("PhysicsMaterial_ig7tw")
script = ExtResource("2_h2yge")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ball/RigidBody3D" groups=["pickupable"]]
shape = SubResource("SphereShape3D_ig7tw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ball/RigidBody3D/CollisionShape3D" groups=["pickupable"]]
mesh = SubResource("SphereMesh_0xm2m")

[node name="World" type="Node" parent="."]

[node name="Spawn" type="Node3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.1, 0, 0)

[node name="BallSpawn" type="Node3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.1, 1, -4.3)

[node name="Wall" type="CSGBox3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.1, 0, -41.5384)
use_collision = true
size = Vector3(20, 1, 1)

[node name="Wall2" type="CSGBox3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.1, 0, 9.2)
use_collision = true
size = Vector3(20, 1, 1)

[node name="Wall5" type="CSGBox3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.1, 3.3, -7)
use_collision = true
size = Vector3(20, 7.6, 1)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="World/Wall5"]
transform = Transform3D(1.5, 0, 0, 0, -6.55671e-08, -1.5, 0, 1.5, -6.55671e-08, 0, -1.7, 0)
operation = 2

[node name="CSGBox3D" type="CSGBox3D" parent="World/Wall5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.6, -2.05, 0.1)
operation = 2
size = Vector3(1.4, 2.5, 2)

[node name="Wall6" type="CSGBox3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.1, 3.3, -15.3)
use_collision = true
size = Vector3(20, 7.6, 1)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="World/Wall6"]
transform = Transform3D(1.5, 0, 0, 0, -6.55671e-08, -1.5, 0, 1.5, -6.55671e-08, -3.3, -1.7, 0)
operation = 2

[node name="CSGBox3D2" type="CSGBox3D" parent="World/Wall6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.6, -2.05, 0.1)
operation = 2
size = Vector3(1.4, 2.5, 2)

[node name="Wall7" type="CSGBox3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.1, 3.3, -25.3)
use_collision = true
size = Vector3(20, 7.6, 1)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="World/Wall7"]
transform = Transform3D(1.5, 0, 0, 0, -6.55671e-08, -1.5, 0, 1.5, -6.55671e-08, 3.9, -1.7, 0)
operation = 2

[node name="CSGBox3D3" type="CSGBox3D" parent="World/Wall7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.6, -2.05, 0.199999)
operation = 2
size = Vector3(1.4, 2.5, 2)

[node name="Wall3" type="CSGBox3D" parent="World"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -24.3, 0, -15.7844)
use_collision = true
size = Vector3(50.9689, 1, 1)

[node name="Wall4" type="CSGBox3D" parent="World"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -44.2, 0, -16.0976)
use_collision = true
size = Vector3(51.5952, 1, 1)

[node name="Ground" type="CSGBox3D" parent="World"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34.1, -2.08698, -15.9364)
use_collision = true
size = Vector3(19.5556, 4.20396, 51)
material = SubResource("StandardMaterial3D_ig7tw")

[node name="Hole" type="CSGCylinder3D" parent="World/Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.215033, 1.95857, -22.2068)
operation = 2
radius = 1.634
height = 0.914917
script = ExtResource("3_h2yge")

[node name="Area3D" type="Area3D" parent="World/Ground/Hole"]
transform = Transform3D(2.24, 0, 0, 0, 2.24, 0, 0, 0, 2.24, 0, -0.6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="World/Ground/Hole/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, 0)
shape = SubResource("CylinderShape3D_h2yge")

[node name="World2" type="Node" parent="."]

[node name="Spawn2" type="Node3D" parent="World2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 0)

[node name="BallSpawn2" type="Node3D" parent="World2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 1, -4.1)

[node name="Wall" type="CSGBox3D" parent="World2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29.45, 0, -41.5384)
use_collision = true
size = Vector3(20, 1, 1)

[node name="Wall2" type="CSGBox3D" parent="World2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29.45, 0, 9.2)
use_collision = true
size = Vector3(20, 1, 1)

[node name="Wall3" type="CSGBox3D" parent="World2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 38.95, 0, -15.7844)
use_collision = true
size = Vector3(50.9689, 1, 1)

[node name="Wall4" type="CSGBox3D" parent="World2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 19.95, 0, -16.0976)
use_collision = true
size = Vector3(51.5952, 1, 1)

[node name="Ground" type="CSGBox3D" parent="World2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29.385, -2.08698, -16.0364)
use_collision = true
size = Vector3(19.5556, 4.20396, 51.2)
material = SubResource("StandardMaterial3D_ig7tw")

[node name="Hole" type="CSGCylinder3D" parent="World2/Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.215033, 1.95857, -22.2068)
operation = 2
radius = 1.634
height = 0.914917
script = ExtResource("3_h2yge")

[node name="Area3D" type="Area3D" parent="World2/Ground/Hole"]
transform = Transform3D(2.24, 0, 0, 0, 2.24, 0, 0, 0, 2.24, 0, -0.6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="World2/Ground/Hole/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, 0)
shape = SubResource("CylinderShape3D_h2yge")

[node name="World3" type="Node" parent="."]

[node name="Spawn3" type="Node3D" parent="World3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 97.2, 0, 0)

[node name="BallSpawn3" type="Node3D" parent="World3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 97.2, 1, -4.1)

[node name="Wall" type="CSGBox3D" parent="World3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 97.2, 0, -41.5384)
use_collision = true
size = Vector3(20, 1, 1)

[node name="Wall2" type="CSGBox3D" parent="World3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 97.2, 0, 9.2)
use_collision = true
size = Vector3(20, 1, 1)

[node name="Wall3" type="CSGBox3D" parent="World3"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 87.5, 0, -15.7844)
use_collision = true
size = Vector3(50.9689, 1, 1)

[node name="Wall4" type="CSGBox3D" parent="World3"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 107, 0, -16.0976)
use_collision = true
size = Vector3(51.5952, 1, 1)

[node name="Ground" type="CSGBox3D" parent="World3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 97.2, -2.08698, -16.0364)
use_collision = true
size = Vector3(19.5556, 4.20396, 51.2)
material = SubResource("StandardMaterial3D_ig7tw")

[node name="Hole" type="CSGCylinder3D" parent="World3/Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.215033, 1.95857, -22.2068)
operation = 2
radius = 1.634
height = 0.914917
script = ExtResource("3_h2yge")

[node name="Area3D" type="Area3D" parent="World3/Ground/Hole"]
transform = Transform3D(2.24, 0, 0, 0, 2.24, 0, 0, 0, 2.24, 0, -0.6, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="World3/Ground/Hole/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, 0)
shape = SubResource("CylinderShape3D_h2yge")

[node name="Canvas" type="CanvasGroup" parent="."]

[node name="ShotsText" type="Label" parent="Canvas"]
offset_right = 118.0
offset_bottom = 36.0
theme = SubResource("Theme_1bvp3")
text = "SHOTS: "
metadata/_edit_use_anchors_ = true

[node name="ScoreText" type="Label" parent="Canvas"]
offset_left = 500.0
offset_top = 3.0
offset_right = 618.0
offset_bottom = 39.0
theme = SubResource("Theme_lquwl")
text = "HOLE:"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="WinBG" type="MeshInstance2D" parent="Canvas"]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(500, 300)
scale = Vector2(1920, 1080)
mesh = SubResource("BoxMesh_1bvp3")

[node name="WinText" type="Label" parent="Canvas"]
visible = false
offset_left = 302.0
offset_top = 244.0
offset_right = 924.0
offset_bottom = 437.0
theme = SubResource("Theme_h2yge")
text = "YOU WIN"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Floor" type="CSGBox3D" parent="."]
transform = Transform3D(100, 0, 0, 0, 1, 0, 0, 0, 100, 0, -6, 0)
use_collision = true
size = Vector3(19.5556, 4.20396, 51.3364)
material = SubResource("StandardMaterial3D_1bvp3")

[connection signal="body_entered" from="World/Ground/Hole/Area3D" to="World/Ground/Hole" method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="World2/Ground/Hole/Area3D" to="World2/Ground/Hole" method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="World3/Ground/Hole/Area3D" to="World3/Ground/Hole" method="_on_area_3d_body_entered"]
